# Collector-s-Notebook

./: Cargo.toml  README.md  build.rs  build.yml
.github/workflows/: build.yml  rust.yaml
assets/: ASSETS-README.md
assets/icons/: Collector.icns
src/: main.rs  model.rs  update.rs  view.rs
src-tauri/: Cargo.toml  image_util.rs  main.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_util.rs  main.rs  model.rs
ui/: app.js  index.html  main.slint  styles.css
