[package]
name = "collectors-notebook"
version = "2.0.0"
edition = "2021"
rust-version = "1.88"
description = "Collector's Notebook — iced port"

[dependencies]
# Latest stable iced (Elm-architecture GUI). `tokio` for Task-driven async file
# dialogs; `image` for decode/scale; `svg`/`canvas` not needed here.
iced = { version = "0.14", features = ["tokio", "image", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[build-dependencies]
# Embeds the .exe / taskbar icon on Windows. No-op elsewhere.
winres = { package = "winresource", version = "0.1" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
